; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_disable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstp_port = type { i32, %struct.bstp_state* }
%struct.bstp_state = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"not a bstp member\00", align 1
@bp_next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bstp_disable(%struct.bstp_port* %0) #0 {
  %2 = alloca %struct.bstp_port*, align 8
  %3 = alloca %struct.bstp_state*, align 8
  store %struct.bstp_port* %0, %struct.bstp_port** %2, align 8
  %4 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %5 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %4, i32 0, i32 1
  %6 = load %struct.bstp_state*, %struct.bstp_state** %5, align 8
  store %struct.bstp_state* %6, %struct.bstp_state** %3, align 8
  %7 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %8 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp eq i32 %9, 1
  %11 = zext i1 %10 to i32
  %12 = call i32 @KASSERT(i32 %11, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %14 = call i32 @BSTP_LOCK(%struct.bstp_state* %13)
  %15 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %16 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %17 = call i32 @bstp_disable_port(%struct.bstp_state* %15, %struct.bstp_port* %16)
  %18 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %19 = load i32, i32* @bp_next, align 4
  %20 = call i32 @LIST_REMOVE(%struct.bstp_port* %18, i32 %19)
  %21 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %22 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %21, i32 0, i32 0
  store i32 0, i32* %22, align 8
  %23 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %24 = call i32 @bstp_reinit(%struct.bstp_state* %23)
  %25 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %26 = call i32 @BSTP_UNLOCK(%struct.bstp_state* %25)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @BSTP_LOCK(%struct.bstp_state*) #1

declare dso_local i32 @bstp_disable_port(%struct.bstp_state*, %struct.bstp_port*) #1

declare dso_local i32 @LIST_REMOVE(%struct.bstp_port*, i32) #1

declare dso_local i32 @bstp_reinit(%struct.bstp_state*) #1

declare dso_local i32 @BSTP_UNLOCK(%struct.bstp_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
